--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
     <!--<input type="text" class="textInput" id="searchInput" placeholder="Search task">-->
     <h1>Tasks</h1>
     <div class="itemContainer" id="itemContainer" /> 
-    <script type="module" src="scripts/main.js"></script>
+    <!--<script type="module" src="scripts/main.js"></script>-->
 </body>
 </html>
